Strawberry Doom 1.4.0 (WHO KNOWS):
	* Rebrand and uncredit that fraggle guy. This project is mine now!
	* Add configure option: --enable-max-optimization (-O3 -g0)
	* Add configure option: --enable-max-debug (-O0 -g3)
	* Enable loading of PWAD DEHACKED Lump (-nointernaldeh to disable)
	* Add -flip which flips levels.

Chocolate Doom 1.4.0 (2010-??-??):

	The biggest change in this version is the addition of OPL
	emulation.  This emulates Vanilla Doom's MIDI playback when
	using a Yamaha OPL synthesizer chip, as was found on
	SoundBlaster compatible cards.

	A software OPL emulator is included as most modern computers do
	not have a hardware OPL chip any more.  If you do have one, you
	can configure Chocolate Doom to use it; see README.OPL.

	The OPL playback feature is not yet perfect or 100% complete,
	but is judged to be good enough for general use.  If you find
	music that does not play back properly, please report it as a
	bug.

	Other changes:
	* The REJECT overflow emulation code from PrBoom+ has been
	  imported.  This fixes demo desync on some demos, although
	  others will still desync.
	* Warnings are now generated for invalid dehacked replacements of
	  printf format strings.  Some potential buffer overflows are
	  also checked.
      * The installation instructions (INSTALL file) have been
        clarified and made more platform-agnostic.
      * The mouse is no longer warped to the center of the screen when
        the demo sequence advances.
      * Key bindings can now be changed for the demo recording quit key
        (normally 'q') and the multiplayer messaging keys (normally
        't', 'g', 'i', 'b' and 'r').

Chocolate Doom 1.3.0 (2010-02-10):

	* Chocolate Doom now runs on Windows Mobile/Windows CE!
	* It is possible to rebind most/all of the keys that control the
	  menu, shortcuts, automap and weapon switching.  The main
	  reason for this is to support the Windows CE port and other
	  platforms where a full keyboard may not be present.